--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dom": "^0.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
+    "typeorm": "^0.3.20",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
